--- a/examples/webxr_ar_hittest_kutlay3.html
+++ b/examples/webxr_ar_hittest_kutlay3.html
@@ -110,6 +110,37 @@
 
 					} );
 
+					new RGBELoader()
+					.setPath( 'textures/equirectangular/' )
+					.load( 'royal_esplanade_1k.hdr', function ( texture ) {
+
+						texture.mapping = THREE.EquirectangularReflectionMapping;
+
+						//scene.background = texture;
+						scene.environment = texture;
+
+						render();
+
+						// model
+
+						const loader = new GLTFLoader().setPath( 'models/gltf/Lantern/glTF/' );
+						loader.load( 'Lantern.gltf', function ( gltf ) {
+							const model = gltf.scene;
+							model.position.set( -1, -1, -2 );
+							model.scale.set( 0.1, 0.1, 0.1 );
+							//mesh.quaternion.setFromRotationMatrix(; controller.matrixWorld );
+							//console.log(gltf.scene)
+							//cubes77.push(gltf.scene)
+							console.log(model)
+
+							scene.add( model );
+
+							render();
+
+						} );
+
+					} );
+
 			
 
 				const geometry = new THREE.CylinderGeometry( 0.1, 0.1, 0.2, 32 ).translate( 0, 0.1, 0 );
