--- a/examples/webxr_ar_hittest_kutlay3.html
+++ b/examples/webxr_ar_hittest_kutlay3.html
@@ -362,19 +362,19 @@
 				}
 				const geometry = new THREE.CylinderGeometry( 0.1, 0.1, 0.2, 32 ).translate( 0, 0.1, 0 );
 
-				function onSelect() {
+				// function onSelect() {
 
-					if ( reticle.visible ) {
+				// 	if ( reticle.visible ) {
 
-						const material = new THREE.MeshPhongMaterial( { color: 0xffffff * Math.random() } );
-						const mesh = new THREE.Mesh( geometry, material );
-						reticle.matrix.decompose( mesh.position, mesh.quaternion, mesh.scale );
-						mesh.scale.y = Math.random() * 2 + 1;
-						scene.add( mesh );
+				// 		const material = new THREE.MeshPhongMaterial( { color: 0xffffff * Math.random() } );
+				// 		const mesh = new THREE.Mesh( geometry, material );
+				// 		reticle.matrix.decompose( mesh.position, mesh.quaternion, mesh.scale );
+				// 		mesh.scale.y = Math.random() * 2 + 1;
+				// 		scene.add( mesh );
 
-					}
+				// 	}
 
-				}
+				// }
 
 				
 
@@ -747,7 +747,7 @@
 
 							const hit = hitTestResults[ 0 ];
 
-							reticle.visible = true;
+							reticle.visible = false;
 							reticle.matrix.fromArray( hit.getPose( referenceSpace ).transform.matrix );
 
 						} else {
