--- a/examples/webxr_ar_hittest_kutlay3.html
+++ b/examples/webxr_ar_hittest_kutlay3.html
@@ -722,7 +722,7 @@
 					{
 						isIntersectselectCircle1 = true;
 						selectCircle1.material.color.setHex(0xffff00);
-						//circleScaleAnm()
+						circleScaleAnm()
 						//selectCircle1.scale.multiplyScalar(1.1)
 						console.log('intersecting')
 					}
