--- a/examples/webxr_ar_hittest_kutlay3_overlay.html
+++ b/examples/webxr_ar_hittest_kutlay3_overlay.html
@@ -88,7 +88,7 @@
 
 
 		<div id="content">
-			<img  src="textures/reticle_hud.png" class="reticle_hud" id="huddingne" />
+			<img  src="textures/reticle_hud.png" class="reticle_hud" id="huddingne" width="35px" height="35px"/>
 			asdasdga
 			<div id="mySidenav" class="sidenav">
 				<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
