--- a/examples/webxr_ar_hittest_kutlay3_overlay.html
+++ b/examples/webxr_ar_hittest_kutlay3_overlay.html
@@ -3,9 +3,28 @@
 	<head>
 		<title>three.js ar - hit test</title>
 		<meta charset="utf-8">
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" />
+		<title>Custom Bootstrap 4 card</title>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,500&amp;subset=latin-ext" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<link type="text/css" rel="stylesheet" href="main.css">
 		<style>
+
+			html {
+				font-size: 14px;
+			}
+			
+			.container {
+				font-size: 14px;
+				color: #666666;
+				font-family: "Open Sans";
+			}
+
+
 			a {
 				color: #8ff;
 			}
@@ -85,27 +104,30 @@
 
 
 		<div id="content">
-			<div id="cards_landscape_wrap-2">
-				<div class="container2">
-					<div class="row">
-						<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-							<a href="">
-								<div class="card-flyer">
-									<div class="text-box">
-										<div class="image-box">
-											<img src="https://cdn.pixabay.com/photo/2018/03/30/15/11/deer-3275594_960_720.jpg" alt="" />
-										</div>
-										<div class="text-container">
-											<h6>Title 01</h6>
-											<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-										</div>
-									</div>
-								</div>
-							</a>
-						</div>
+			<div class="container" id='container'>
+				<div class="row pt-5 m-auto">
+				  <div class="col-md-6 col-lg-4 pb-3">
+			
+					<!-- Copy the content below until next comment -->
+					<div class="card card-custom bg-white border-white border-0">
+					  <div class="card-custom-img" style="background-image: url(http://res.cloudinary.com/d3/image/upload/c_scale,q_auto:good,w_1110/trianglify-v1-cs85g_cc5d2i.jpg);"></div>
+					  <div class="card-custom-avatar">
+						<img class="img-fluid" src="http://res.cloudinary.com/d3/image/upload/c_pad,g_center,h_200,q_auto:eco,w_200/bootstrap-logo_u3c8dx.jpg" alt="Avatar" />
+					  </div>
+					  <div class="card-body" style="overflow-y: auto">
+						<h4 class="card-title">Card title</h4>
+						<p class="card-text">Card has minimum height set but will expand if more space is needed for card body content. You can use Bootstrap <a href="https://getbootstrap.com/docs/4.0/components/card/#card-decks" target="_blank">card-decks</a> to align multiple cards nicely in a row.</p>
+					  </div>
+					  <div class="card-footer" style="background: inherit; border-color: inherit;">
+						<a href="#" class="btn btn-primary">Option</a>
+						<a href="#" class="btn btn-outline-primary">Other option</a>
+					  </div>
 					</div>
+					<!-- Copy until here -->
+			
+				  </div>
 				</div>
-			</div>
+			  </div>
 		
 			<div id="img-div">
 				<img  src="textures/reticle_hud.png" class="reticle_hud" id="huddingne" width="35px" height="35px"/>
@@ -136,7 +158,7 @@
 			}
 		</script>
 
-		<div id="container"></div>
+
 		<div id="menu">
 			<button id="table">ANM1</button>
 			<button id="sphere">ANM2</button>
@@ -318,7 +340,7 @@
 				arbutton = ARButton.createButton(renderer, { 
 					requiredFeatures: ['hit-test'],
 					optionalFeatures: ['dom-overlay'],
-					domOverlay: { root: document.getElementById('cards_landscape_wrap-2') } 
+					domOverlay: { root: document.getElementById('container') } 
 				})
 				document.body.appendChild(arbutton);
 
