su kuyusu vr demo

--- a/examples/kuyuprojesi.html
+++ b/examples/kuyuprojesi.html
@@ -418,6 +418,9 @@
 				camera.rotation.y = 0.3928531677427101;
 				scene.add(camera)
 
+				const light = new THREE.HemisphereLight( 0xffffff, 0xbbbbff, 1 );
+				light.position.set( 0.5, 1, 0.25 );
+				scene.add( light );
 				//const texture = new THREE.TextureLoader().load( 'textures/crate.gif' );
 
 				//const geometry = new THREE.BoxGeometry( 200, 200, 200 );
@@ -452,7 +455,8 @@
 				controls.target.set( 0, 0.5, - 3 );
 				controls.update();
 
-                
+                document.body.appendChild( ARButton.createButton( renderer, { requiredFeatures: [ 'hit-test' ] } ) );
+
                 
 				var obj;
 
@@ -481,7 +485,7 @@
 							})
 						    model = gltf.scene;
 							obj = gltf.scene;
-							model.position.set( 0, 0, -3 );
+							model.position.set( 0, -2, -3 );
 							model.scale.set( 0.006, 0.006, 0.006 );
 							//mesh.quaternion.setFromRotationMatrix(; controller.matrixWorld );
 							//console.log(gltf.scene)
@@ -517,7 +521,7 @@
             function animateHelmetOnloadComplete(duration)
             {
                 new TWEEN.Tween( GlbObject.scale )
-						.to( { x: 0.01, y: 0.01, z: 0.01 }, 1000 )
+						.to( { x: 0.006, y: 0.006, z: 0.006 }, 1000 )
 						.easing( TWEEN.Easing.Exponential.InOut )
 						.onUpdate( render )
 						.start();
