--- a/examples/su_kuyusu_VR_Demo.html
+++ b/examples/su_kuyusu_VR_Demo.html
@@ -614,12 +614,12 @@
 
 						const material = new THREE.MeshPhongMaterial( { color: 0xffffff * Math.random() } );
 						const mesh = new THREE.Mesh( geometry, material );
-						reticle.matrix.decompose( mesh.position, mesh.quaternion, mesh.scale );
-						mesh.scale.y = Math.random() * 2 + 1;
+						//reticle.matrix.decompose( mesh.position, mesh.quaternion, mesh.scale );
+						//mesh.scale.y = Math.random() * 2 + 1;
 						//scene.add( mesh );
 					}
 
-					circleScaleAnm(selectCircle1, 1000, isIntersectselectCircle1)
+					//circleScaleAnm(selectCircle1, 1000, isIntersectselectCircle1)
 
 
 				}
@@ -926,6 +926,7 @@
 
 							//.visible = true;
 							reticle.matrix.fromArray( hit.getPose( referenceSpace ).transform.matrix );
+							reticle.visible = false;
 
 						} else {
 
